# ninja

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  Cargo.toml  Dockerfile  Dockerfile.build  LICENSE.md  PKGBUILD  PKGBUILD-bin  README.md  apache-editor.sln  build.py  package.json  pnpm-lock.yaml  shuriken.hexpat  test.c  test.md  test.ns  test_app  test_ergonomic.c  version.py
.cargo/: config.toml
.github/workflows/: build.yml  main.yml  test.yml
API/: Cargo.toml
API/src/: api.rs  backup.rs  config.rs  dsl.rs  error.rs  lib.rs  logger.rs  main.rs  manager.rs  shuriken.rs  templater.rs  types.rs
CLI/: Cargo.toml  README.md  test.ns
CLI/src/: httpd.conf  log.rs  main.rs  manager.rs  prompts.rs  repl.rs  service_manager.rs  structs.rs
FFI/: Cargo.toml  README.md  SECURITY_SUMMARY.md  build.rs  cbindgen.toml  helpers.h
FFI/src/: lib.rs
GUI/: README.md  biome.json  build.gradle.kts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
GUI/app/: globals.css  layout.tsx  page.tsx
GUI/app/armory/: page.tsx
GUI/components/: application-menubar.tsx  mini-repl.tsx  window-controls.tsx
GUI/components/pages/: armory.tsx  backup.tsx  config.tsx  dashboard.tsx  developer.tsx  logs.tsx  scripting.tsx  tools.tsx
GUI/components/ui/: animated-tabs.tsx  application-menubar.tsx  armory-card.tsx  armory-modal.tsx  array-editor.tsx  button.tsx  custom-rightclick.tsx  install-card.tsx  loading.tsx  logs-display.tsx  moving-border-button.tsx  moving-border-wrapper.tsx  projects-pane.tsx  provider-box.tsx  registry-modal.tsx  settings-dialog.tsx  text-time.tsx  themetoggle.tsx  update-btn.tsx  update-dialog.tsx  window-controls.tsx
GUI/gradle/wrapper/: gradle-wrapper.properties
GUI/hooks/: config.ts  use-install-shuriken.ts  use-shuriken.ts  use-shurikens.ts
GUI/lib/: .types.ts.kate-swp  config.ts  registerLua.ts  types.ts  updater.ts  utils.ts
GUI/src-tauri/: .gitignore  Cargo.toml  build.rs  registry.toml  tauri.conf.json  test.txt
GUI/src-tauri/capabilities/: default.json  desktop.json
GUI/src-tauri/icons/: icon.icns
GUI/src-tauri/registry.db/: IDENTITY  MANIFEST-000005  OPTIONS-000007
GUI/src-tauri/src/: commands.rs  db.rs  lib.rs  link_parser.rs  shuriken.rs  structs.rs
GUI/src-tauri/windows/: hooks.nsh
GUI/src/main/kotlin/: Bootstrapper.kt  Main.kt
HTTP/: Cargo.toml  README.md
HTTP/src/: graphql.rs  lib.rs
MCP/: Cargo.toml  README.md
MCP/src/: handler.rs  lib.old.rs  lib.rs  tools.rs
NRT/: Cargo.toml
NRT/src/: api.rs  lib.rs  util.rs
NSE/: Cargo.toml
NSE/src/: api.rs  env.rs  fs.rs  lib.rs  modules.rs  net.rs  shell.rs  sys.rs
TUI/: apache-editor.csproj  project.nuget.cache
assets/: cheatsheet.md  docs.md  shuriken.hexpat
core/: Cargo.toml  README.md
core/src/: backup.rs  dsl.rs  error.rs  lib.rs  manager.rs  modules.rs  process.rs  scripting.rs  shuriken.rs  templater.rs  types.rs  util.rs
core/src/backup/: mod.rs
core/src/common/: config.rs  error.rs  mod.rs  registry.rs  structs.rs  traits.rs  types.rs
core/src/scripting/: dsl.rs  mod.rs  modules.rs  process.rs  templater.rs
core/src/scripting/modules/: env_module.rs  fs_module.rs  ninja_module.rs  proc_module.rs  shared.rs  shell_module.rs
core/src/utils/: download.rs  mod.rs
include/: ninja.h
kotlin/: settings.gradle.kts
kotlin/src/main/resources/editor/: index.html
scripts/: build.py  bump.sh  install.py  version.py
sdk/: shuriken.hexpat
src/: editor.rs  main.rs
tauri/: package.json  pnpm-lock.yaml  tsconfig.json
tauri/app/: globals.css  layout.tsx  page.tsx
tauri/app/splash/: page.tsx
tauri/components/: apache-editor  apache-editor.tsx  application-menubar.tsx  swappable-sidebar.tsx  terminal-component.tsx  window-controls.tsx
tauri/components/pages/: config.tsx  dashboard.tsx  tools.tsx
tauri/components/ui/: animated-tabs.tsx  button.tsx  themetoggle.tsx
tauri/lib/: tauri-api.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs  main.rs  registry.rs  shuriken.rs
tests/: Cargo.toml  test.c
tests/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
