[package]
name = "ninja-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["rustls", "macros"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
ninja-core = { path = "../core" }
tokio = { version = "1.45.1", default-features = false }