[package]
name = "ninja-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"   
name = "shurikenctl"

[dependencies]
clap = { version = "4.5.37", default-features = false, features = ["cargo"] }
owo-colors = { version = "4.2.0", features = ["supports-color"] }
tokio = { version = "1.45.1", features = ["full"] }
ninja-engine = { path = "../NSE"}
log = "0.4.27"
fern = { version = "0.7.1", features = ["colored", "chrono"] }
chrono = "0.4.41"
file-rotate = "0.8.0"
ninja-api = { path = "../API" }
ninja-mcp = { path = "../MCP" }
clap-verbosity-flag = "3.0.3"
serde = "1.0.219"
toml = "0.9.4"
dialoguer = { version = "0.11.0", features = ["completion"] }
terminal_size = "0.4.2"