[package]
name = "ninja-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
either = { version = "1.15.0", features = ["serde"] }
ninja-core = { path = "../core"}
once_cell = "1.21.3"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread"]}
