[package]
name = "ninja-http"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
ninja-core = { path = "../core" }
async-graphql = { version = "7.0.17", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["net"] }
anyhow = "1.0.100"
axum = "0.8.4"
