[package]
name = "ninja-mcp"
version.workspace = true
edition = "2024"

[dependencies]
ninja-core = { path = "../core"}
serde_json = { version = "1.0.143", default-features = false }
tokio = { version = "1.47.1", default-features = false }
rmcp = { version = "0.10.0", features = ["server", "transport-io", "macros", "schemars"] } # too bespoke to customize features.
serde = { version = "1.0.219", default-features = false }
log = { version = "0.4.27", default-features = false }
dirs-next = "2.0.0"
