[package]
name = "ninja-mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ninja-core = { path = "../core"}
serde_json = { version = "1.0.143", default-features = false }
tokio = { version = "1.47.1", default-features = false }
rmcp = { version = "1.4.0", features = ["server", "transport-io", "macros", "schemars"] } # too bespoke to customize features.
serde = { version = "1.0.219", default-features = false }
log = { version = "0.4.27", default-features = false }
dirs-next = "2.0.0"
