[package]
name = "ninja-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
reqwest = { version = "0.12.22", default-features = false}
rquickjs = { version = "0.9.0", features = ["futures", "macro", "bindgen"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
