[package]
name = "ninja-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
log = "0.4.27"
mlua = { version = "0.11.1", features = ["anyhow", "luau", "serde", "send"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking"]}
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
