[package]
name = "ninja-core"
version.workspace = true
edition = "2024"

[lib]
name = "ninja"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"
nix = {version = "0.30.1", features = ["process", "signal", "user"]}

[target.'cfg(windows)'.dependencies]
windows = "0.61.3"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["now"]}
log = { version = "0.4.27", default-features = false }
mlua = { version = "0.11.1", default-features = false, features = ["anyhow", "luau", "serde", "send", "async"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140" }
regex = { version = "1.11.1", default-features = false }
either = { version = "1.15.0", default-features = false }
globwalk = { version = "0.9.1", default-features = false }
tar = { version = "0.4.44", default-features = false }
flate2 = { version = "1.1.2" }
anyhow = { version = "1.0.99", default-features = false }
shlex = { version = "1.3.0", default-features = false }
opendal = { version = "0.54.0", default-features = false, features = ["services-gdrive", "services-fs"] }
#keyring = { version = "3.6.3", default-features = false, features = ["crypto-rust"] }
ignore = { version = "0.4.23", default-features = false}
toml = { version = "0.8.23", default-features = false, features = ["parse", "display"]}
tokio = { version = "1.47.1", default-features = false, features = ["process", "fs", "sync", "io-util", "rt"]}
serde_cbor = "0.11.2"
tera = { version = "1.20.0" }
dirs-next = "2.0.0"
lazy_static = "1.5.0"
relative-path = "2.0.1"

[features]
default = []
testing = []
