[package]
name = "ninja-core"
version.workspace = true
edition = "2024"
license = "AGPL-3.0-only"
authors = ["tunafysh"]
description = "A powerful, cross-platform package manager and runtime for managing tools and plugins (shurikens)"
repository = "https://github.com/tunafysh/ninja"
documentation = "https://docs.rs/ninja-core"
homepage = "https://github.com/tunafysh/ninja"
keywords = ["package-manager", "shuriken", "scripting", "lua", "cross-platform"]
categories = ["command-line-utilities", "development-tools", "os"]
readme = "README.md"
exclude = ["assets/", "tests/"]


[lib]
name = "ninja"
path = "src/lib.rs"
crate-type = ["rlib"]


[target.'cfg(unix)'.dependencies]
libc = "0.2.175"
nix = {version = "0.31.2", features = ["process", "signal", "user"]}
shell-escape = "0.1.5"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.61.3", features = ["Win32_System_Threading", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"]}

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
runas = "1.2.0"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["now"]}
log = { version = "0.4.27", default-features = false }
mlua = { version = "0.11.1", default-features = false, features = ["anyhow", "lua54", "serde", "send", "async", "vendored"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140" }
regex = { version = "1.11.1", default-features = false }
either = { version = "1.15.0", default-features = false }
globwalk = { version = "0.9.1", default-features = false }
tar = { version = "0.4.45", default-features = false }
flate2 = { version = "1.1.2" }
anyhow = { version = "1.0.99", default-features = false }
shlex = { version = "1.3.0", default-features = false }
opendal = { version = "0.55.0", default-features = false, features = ["services-fs"] }
ignore = { version = "0.4.23", default-features = false}
toml = { version = "1.1.2", default-features = false, features = ["parse", "display", "serde"]}
tokio = { version = "1.47.1", default-features = false, features = ["process", "fs", "sync", "io-util", "rt"]}
serde_cbor = "0.11.2"
tera = { version = "1.20.0", features = ["builtins"] }
dirs-next = "2.0.0"
lazy_static = "1.5.0"
relative-path = "2.0.1"
sha2 = "0.11.0"
whoami = { version = "2.1.1", default-features = false }
bytes = "1.11.1"
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
async-trait = "0.1.89"
serde_yaml = "0.9.34"
url = "2.5.8"
tempfile = "3.27.0"

[features]
default = []
testing = []
