[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_fs = "1.1.3"
ninja-api = { path = "../API" }
tempfile = "3.23.0"
ninja-engine = { path = "../NSE", features = ["testing"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros"] }
either = "1.15.0"
